--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,5 @@
 # Required Configuration for SonarQube analysis
 sonar.projectKey=CoTuring_slang
 sonar.organization=co-turing
+sonar.exclusions=**/node_modules/**,**/coverage/**,**/*.min.js,**/dist/**,**/build/**
+sonar.java.exclusions=**/*.java
